# agent-balance

./: README.md  agent_balance.py  agent_balance_tray.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: balancing.md
sim/: README.md  bootstrap.py  calibrate.py  demand.py  engine.py  events.py  experiment.py  facevalidity.py  metrics.py  policies.py  prod.py  report.py  rng.py  run.py  state.py  tokenbucket.py
sim/fixtures/: alt1  alt1.history  alt2  alt2.history  alt3  alt3.history  caps.json  main  main.history  swaps
sim/fixtures/projects/-home-user-proj/: session.jsonl
sim/fixtures/projects/-home-user-proj/session/subagents/: agent-a1.jsonl
sim/tests/: conftest.py  test_bootstrap.py  test_calibrate.py  test_demand.py  test_engine.py  test_facevalidity.py  test_metrics.py  test_policies.py  test_rng.py  test_tokenbucket.py
tests/: conftest.py  test_atomic.py  test_cli.py  test_discovery.py  test_fetch.py  test_format.py  test_harvest.py  test_hotswap_live.py  test_ledger.py  test_metrics.py  test_policy.py  test_projection.py  test_pull.py  test_refresh.py  test_resilience.py  test_shard.py  test_status.py  test_tick.py
