[project]
name = "agent-balance"
version = "0.2.0"
description = "Swap Claude accounts beneath running sessions before the 5-hour limit kills your workflow"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Braverman" }]
requires-python = ">=3.10"
# Runtime is stdlib-only on purpose: install.sh can drop the scripts onto
# any box with a system python, no venv needed. Keep it that way.
dependencies = []

[project.urls]
Repository = "https://github.com/paulbrav/agent-balance"

[project.scripts]
agent-balance = "agent_balance:main"
# agent-balance-tray is deliberately NOT an entry point: it needs the SYSTEM
# python's GObject bindings (gi), which a uv-managed venv doesn't have.
# install.sh installs it with a /usr/bin/python3 shebang instead.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent_balance.py", "agent_balance_tray.py"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14", "ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["agent_balance", "agent_balance_tray"]

[tool.ruff.lint.per-file-ignores]
# gi.require_version must run before the gi.repository imports.
"agent_balance_tray.py" = ["E402"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
# The tray imports gi (no type stubs, system-python only).
exclude = ["agent_balance_tray.py"]
